--- a/b4/style.css
+++ b/b4/style.css
@@ -1,13 +1,22 @@
 body {
-  background:#fafafa;
+  background: #fafafa;
 }
 
+/* HEADER */
 .header-content, .header-links, .inner-content {
-    max-width: 1700px;
+    max-width: 1600px;
     margin: 0 auto;
 }
 
-/* Dropdown Button styling */
+.header-content .input-group.pb-2 {
+  width:430px;
+}
+
+@media only screen and (max-width: 600px) {
+  .header-content .input-group.pb-2 {
+    width:300px;
+  }
+}
 button.nav-dropdown-btn > i.fas, button.nav-dropdown-btn > i.fab, button.nav-dropdown-btn > i.far{
     vertical-align: middle;
 }
@@ -25,43 +34,67 @@ button.nav-dropdown-btn:focus{
     display: inline-block;
     font-weight: 400;
     text-align: center;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .nav-dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .nav-dropdown-menu {
-    display: none;
-    position: absolute;
-    background-color: #337ab7;
-    width:180px;
-    /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .nav-dropdown-menu a {
-    color: #fff;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .nav-dropdown-menu a:hover {
-      color: #000;
-      background-color: #ddd;
-    }
-  
-  /* Show the dropdown menu on hover */
-  .nav-dropdown:hover .nav-dropdown-menu {display: block;}
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .nav-dropdown:hover .nav-dropdown-btn {
+}
+.nav-dropdown {
+  position: relative;
+  display: inline-block;
+}
+.nav-dropdown-menu {
+  display: none;
+  position: absolute;
+  background-color: #337ab7;
+  width:180px;
+  z-index: 1;
+}
+.nav-dropdown-menu a {
+  color: #fff;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.nav-dropdown-menu a:hover {
     background-color: #286090;
     border-color: #204d74;
-    }
+}
+.nav-dropdown:hover .nav-dropdown-menu {
+  display: block;
+}
+.nav-dropdown:hover .nav-dropdown-btn {
+  background-color: #286090;
+  border-color: #204d74;
+}
+
+/* SIDEBAR */
+nav#sidebar i.fas, nav#sidebar i.fab, nav#sidebar i.far {
+    vertical-align: middle;
+}
+
+#sidebar {
+  width: 190px;
+  position: fixed;
+  top: 0;
+  left: -250px;
+  height: 100vh;
+  z-index: 1050;
+  color: #fff;
+  transition: all 0.3s;
+  overflow-y: scroll;
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
+}
+
+#sidebar.active {
+  left: 0;
+}
+
+#sidebar ul p {
+  color: #fff;
+  padding: 10px;
+}
+#sidebar ul li a:hover {
+    background-color: #286090;
+    border-color: #204d74;
+}
+
+.footer-copyright {
+    background: #fafafa;
+}
